--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://03do-new30.github.io/react_movie_app"
+  "homepage": "https://03do-new30.github.io/react_movie_app/"
 }
